--- a/css/suit.css
+++ b/css/suit.css
@@ -1,201 +1,240 @@
 * {
-  text-decoration: none;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+    text-decoration: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  background-color: rgb(42, 42, 42);
-  color: #fff;
-  font-family: "Cantora One", sans-serif;
+    background-color: rgb(42, 42, 42);
+    color: #fff;
+    font-family: 'Cantora One', sans-serif;
 }
 
-/* navbar */
+/* Navbar */
 .navbar {
-  background-color: rgb(0, 0, 0);
-  border-bottom: 1px solid #fff;
-  justify-content: space-between;
-  display: flex;
-  padding: 0.5rem;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 9999;
+    background-color: rgba(0, 0, 0);
+    border-bottom: 1px solid #fff;
+    display:flex;
+    padding: 0.5rem;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 9999;
 }
 
 .navbar .logo {
-  color: #fff;
-  font-size: 2rem;
-  align-items: center;
-  display: flex;
-  padding: 2rem;
-  font-family: "Belanosima", sans-serif;
-  font-style: italic;
+    color: #fff;
+    font-size: 2rem;
+    align-items: center;
+    display: flex;
+    padding: 2rem;
+    font-family: 'Belanosima', sans-serif;
+    font-style: italic;
 }
 
-/* section */
 .section {
-  margin-top: 7.2rem;
-  display: block;
-  padding: 2rem;
-  background-color: rgb(48, 48, 48);
-  align-items: center;
-  right: 0;
-  left: 0;
+  position: relative;
 }
 
-.section .game {
-  position: relative;
+.player-bot {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px;
+}
+
+.you, .bot {
+  font-size: 2rem;
+}
+
+.bot {
+  transform: translateX(-20rem);
+}
+
+.game {
+  display: flex;
+  justify-content: space-around;
+  height: 20rem;
+  align-items: center;
+}
+
+.center {
+ position: absolute;
+ display: flex;
+ flex-direction: column;
+ height: 28.125rem;
+ bottom: -50px;
+ justify-content: center;
+ align-items: center;
+ width: 500px;
+ margin-left:2rem;
+ margin-right:3rem;
+}
+
+.vs {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-}
-
-.section .pilihan {
-  background-color: #f5460c;
-  position: relative;
-  display: block;
-  margin: 1.4rem;
-  width: 10rem;
-  height: 3rem;
-  text-align: center;
-  font-size: 2rem;
-  border: 2px solid black;
-  border-radius: 10px;
-}
-
-.section .pilihan:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  background-color: #ae2f05;
-  z-index: 1;
-}
-
-.section .pilihanBot {
-  background-color: #f5460c;
-  width: 10rem;
-  height: 3rem;
-  text-align: center;
-  font-size: 2rem;
-  border: 2px solid black;
-  border-radius: 10px;
-  right: 2rem;
-  top: calc(50% - 1.5rem);
-  margin-top: 0;
-  margin-right: 0;
-  z-index: 1;
-}
-
-.section .you {
-  font-size: 3rem;
-}
-
-.section .bot {
-  position: absolute;
-  font-size: 3rem;
-  top: 13.4rem;
-  margin-left: 68rem;
-}
-
-.section .game .vs h1 {
-  justify-content: center;
-  display: flex;
-  transform: translateY(-9rem);
-  font-size: 3.5rem;
-  text-shadow: 2px 2px 4px #000, -2px -2px 4px #000;
-}
-
-.section .game span {
-  color: #ff0000;
-}
-
-.section .vs #result {
-  content: "";
-  background-color: #000000;
-  position: absolute;
-  display: flex;
-  border: 2px solid rgb(255, 255, 255);
-  border-radius: 10px;
-  width: 10rem;
-  height: 2.5rem;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  right: 37.6rem;
-  top: 10rem;
+  text-align: center;
+  height: 28.125rem;
 }
 
-#skorPlayer {
-  content: "";
-  display: flex;
-  width: 4rem;
+.vs h1 {
+  font-size: 3rem;
+}
+
+.vs h1 span {
+  color: red;
+}
+
+#result {
+  background-color:black;
+  font-size: 2rem;
   height: 4rem;
-  justify-content: center;
-  align-items: center;
-  font-size: 4rem;
-  top: 0;
+  width: 200px;
+  line-height: 4rem;
+  border: 2px solid;
+  border-radius: 30px;
 }
 
-/* Media Query */
-/* Mobile */
+.left {
+  display: flex;
+  flex-direction: column;
+  width: 15rem;
+}
+
+.pilihan, .pilihanBot {
+  background-color: #ff6600;
+  margin: 20px auto;
+  font-size: 2rem;
+  text-align: center;
+  width: 13rem;
+  height: 50px;
+  border-radius: 10px;
+  border: 3px solid black;
+}
+
+.pilihan:hover {
+  cursor: pointer;
+  background-color: #3b1800;
+  transform: scale(1.15);
+}
+
+.right {
+  width: 15rem;
+}
+
+.score {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  font-size: 3rem;
+  width: 300px;
+  margin: auto 38.1%;
+  transform: translateY(40px);
+}
+
+#pilPlay {
+  font-size: 20px;
+  width: 500px;
+  height: 40px;
+}
+
+/* media query */
 @media (max-width: 450px) {
-  body {
-    font-family: "Cantora One", sans-serif;
+
+ 
+
+.section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4rem;
   }
 
-  .navbar {
-    background-color: #000000;
+  .game {
+    height: 87.5vh;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .score {
+    margin: 0;
+    width: 15rem;
+    text-align: end;
+    font-size: 2rem;
+    display: flex;
+    transform: translateY(14rem);
+  }
+
+
+  .left {
+    flex-direction: row;
+    z-index: 1;
+  }
+
+  .pilihan {
+    width: 60%;
+    margin: 10px;
+    position: relative;
+  }
+
+  .center {
+    justify-content: space-around;
+    width: 80%;
+    height: 100%;
+    margin: 0;
+    top: 0;
+  }
+
+  .vs {
+    width: 100%;
+    height: 100%;
   }
 
   .navbar .logo {
     font-size: 80%;
   }
 
-  .section {
-    margin-top: 6rem;
-    height: 100vh;
+  .navbar {
+    position: fixed;
+    height: 50px;
   }
 
-  #skorPlayer {
-    font-size: 3rem;
-    margin-left: -2rem;
-
-  }
-
-  #result{
-  position: absolute;
-  left:2rem;
-  transform: translateY(-13.4rem);
-
-  }
-
-  .left {
+  .player-bot {
+    position: absolute;
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
+    padding: 0;
     justify-content: center;
-    margin-top: 10rem;
-    padding: 0.8rem;
-  }
-
-  .right {
-    display: flex;
-    justify-content: center;
-    transform: translateY(-18rem);
-    
-  }
-
-  .pilihanBot {
-    background-color: #000000;
+    height: 100%;
   }
 
   .you, .bot {
-    display: none;
+    font-size: 80%;
+    margin: 40px auto;
   }
 
-  .vs h1 {
-  margin-top:-2rem;
+  .bot {
+    transform: translateX(0);
+    transform: translateY(-100px);
   }
-  
+
+  #result {
+    width: 50%;
+    height: 10%;
+    font-size:1.5rem;
+    text-align: center;
+    line-height: 45px;
+    transform: translateY(15px);
+  }
  
+  #pilPlay {
+    font-size: 50%;
+    width: 100%;
+  }
 }
+
+
